--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -391,6 +391,8 @@ if(all((bestcost_prob_dying$prob_dying -
 
 bestcost_pm_deaths_lifetable_airqplus <-
   bestcost::attribute_deaths_from_lifetable(
+    approach_exposure = "constant",
+    approach_newborns = "with_newborns",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
@@ -506,6 +508,7 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifet
 bestcost_pm_yll_lifetable_airqplus <-
   bestcost::attribute_yll_from_lifetable(
     approach_exposure = "constant",
+    approach_newborns = "with_newborns",
     exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration,
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
     rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
