--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -510,6 +510,19 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_exposure_single_year_lifet
                # result_vector_alternative = airqplus_pm_deaths_yll)
               
 # View(bestcost_pm_yll_exposure_single_year_lifetable_airqplus)
+
+
+test_baseline <- bestcost_pm_yll_exposure_single_year_lifetable_airqplus[["detailed"]][["interim"]][["pop_baseline_scenario_nest"]][[3]] %>% 
+  select(age, contains("population_")) %>% 
+  select(-contains("entry"), -population_2019_end)
+
+test_baseline_entry <- bestcost_pm_yll_exposure_single_year_lifetable_airqplus[["detailed"]][["interim"]][["pop_baseline_scenario_nest"]][[3]] %>% 
+  select(age, contains("_entry"))
+
+test_impacted <- bestcost_pm_yll_exposure_single_year_lifetable_airqplus[["detailed"]][["interim"]][["pop_impacted_scenario_nest"]][[3]] %>% 
+  select(age, contains("population_")) %>% 
+  select(-contains("entry"), -population_2019_end)
+
 ```
 Difference (between best-cost and GeLuft results) should be 3.86%.
 
